// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`portals_p2.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 6 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo13",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 50,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo14",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 51,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo15",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 52,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo16",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 53,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo17",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 54,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo18",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 55,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo19",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 56,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo20",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 57,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo21",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 58,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo22",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 59,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo23",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  "location": 63,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 60,
                      },
                      "location": 65,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo24",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek2",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 56,
                    },
                  },
                  "location": 64,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 50,
                      },
                      "location": 66,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo25",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 44,
                    "relname": "onek2",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 37,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 56,
                    },
                  },
                  "location": 64,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {
                        "ival": 60,
                      },
                      "location": 66,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo13",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 47 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo14",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo15",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo16",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 53 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo17",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 55 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo18",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo19",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 59 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo20",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 61 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo21",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 63 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo22",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 65 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo23",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 67 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo24",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "foo25",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo13",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo14",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo15",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo16",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 79 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo17",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo18",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 83 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo19",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 85 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo20",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 87 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo21",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 89 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo22",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 91 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo23",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 93 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo24",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 95 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ClosePortalStmt": {
          "portalname": "foo25",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`portals_p2.sql > line 97 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_COMMIT",
        },
      },
    },
  ],
  "version": 160001,
}
`;
